--- a/Ejercicio-1-2-Blanca-Cano.ipynb
+++ b/Ejercicio-1-2-Blanca-Cano.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "75577392"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ii) Calcula $a^{n-1}$ mod $n$, para cada uno de esas cinco bases usando sucesivamente el algoritmo de izquierda-derecha y de derecha.\n",
+    "ii) Calcula $a^{n-1}$ mod $n$, para cada uno de esas cinco bases usando sucesivamente el algoritmo de izquierda-derecha y de derecha a izquierda.\n",
     "\n",
     "### Base matemática  \n",
     "**Pequeño teorema de Fermat**  \n",
@@ -91,16 +91,16 @@
     "\n",
     "En caso contrario diremos que $p$ es un posible primo de Fermat en la base $a$ . \n",
     "\n",
-    "Vemos que para el cálculo de $a^{p-1} \\mod p$ es necesario el cálculo de una potencia, con el fin de optimizar el algoritmo calcularemos la potencia de $a^{p-1}$ con el método de las exponencial rápida. \n",
+    "Vemos que para el cálculo de $a^{p-1} \\mod p$ es necesario el cálculo de una potencia, con el fin de optimizar el algoritmo calcularemos la potencia de $a^{p-1}$ con el método de la exponencial rápida. \n",
     "Existen dos variantes, presentamos a continuación dos versiones del cálculo de $f(a,q,p) = a^{q} \\mod p$ combinando las dos técnicas de exponenciación.\n",
     "\n",
     "#### Algoritmo de derecha izquierda\n",
-    "La idea que subyace es que los dígitos en binario no se conocen, así que se van calculando a la par que se aplica el algoritmo. "
+    "La idea que subyace es que los dígitos en binario no se conocen, así que se van calculando los dígitos a la par que se calcula el módulo(de esta manera no habrá un desbordamiento). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "VerboseRightToLeftFastExponential (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "VerboseLeftToRightFastExponential (generic function with 1 method)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
      "text": [
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de DERECHA a IZQUIERDA para base=2 y p=75577393 \n",
+      "Ejección de IZQUIERDA a DERECHA para base=2 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "p-1 = 75577392 = 100100000010011100000110000 (en binario)\n",
       "Paso 0 , acu: 1\n",
@@ -296,7 +296,7 @@
       "Se tiene que 2^(75577393-1) mod 75577393 = 50057215\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de DERECHA a IZQUIERDA para base=3 y p=75577393 \n",
+      "Ejección de IZQUIERDA a DERECHA para base=3 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "p-1 = 75577392 = 100100000010011100000110000 (en binario)\n",
       "Paso 0 , acu: 1\n",
@@ -363,7 +363,7 @@
       "Se tiene que 3^(75577393-1) mod 75577393 = 64972403\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de DERECHA a IZQUIERDA para base=5 y p=75577393 \n",
+      "Ejección de IZQUIERDA a DERECHA para base=5 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "p-1 = 75577392 = 100100000010011100000110000 (en binario)\n",
       "Paso 0 , acu: 1\n",
@@ -430,7 +430,7 @@
       "Se tiene que 5^(75577393-1) mod 75577393 = 58601398\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de DERECHA a IZQUIERDA para base=7 y p=75577393 \n",
+      "Ejección de IZQUIERDA a DERECHA para base=7 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "p-1 = 75577392 = 100100000010011100000110000 (en binario)\n",
       "Paso 0 , acu: 1\n",
@@ -497,7 +497,7 @@
       "Se tiene que 7^(75577393-1) mod 75577393 = 22113448\n",
       "------------------------------------------------------------\n",
       "------------------------------------------------------------\n",
-      "Ejección de DERECHA a IZQUIERDA para base=11 y p=75577393 \n",
+      "Ejección de IZQUIERDA a DERECHA para base=11 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "p-1 = 75577392 = 100100000010011100000110000 (en binario)\n",
       "Paso 0 , acu: 1\n",
@@ -530,7 +530,13 @@
       "Paso 27 , acu: 21343212\n",
       "Se tiene que 11^(75577393-1) mod 75577393 = 21343212\n",
       "------------------------------------------------------------\n",
-      "------------------------------------------------------------\n",
+      "------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Ejección de DERECHA a IZQUIERDA para base=11 y p=75577393 \n",
       "------------------------------------------------------------\n",
       "paso 0, acu: 1, base: 11\n",
@@ -573,7 +579,7 @@
     "     # De derecha a izquierda\n",
     "     println(repeat('-', 60))\n",
     "     println(repeat('-', 60))\n",
-    "     println(\"Ejección de DERECHA a IZQUIERDA para base=$b y p=$n \")\n",
+    "     println(\"Ejección de IZQUIERDA a DERECHA para base=$b y p=$n \")\n",
     "     println(repeat('-', 60))\n",
     "     r = VerboseLeftToRightFastExponential(b, n-1, n)\n",
     "     println(\"Se tiene que $(b)^($n-1) mod $n = $(r)\")\n",
@@ -590,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -621,9 +627,9 @@
    "source": [
     "iii) ¿Es $n$ un posible primo posible primo de Fermat para alguna de ellas?\n",
     "\n",
-    "No es un posible primo de Fermat ya que razonando por contradice la tesis del pequeño teorema de Fermat. \n",
+    "No es un posible primo de Fermat ya que contradice la tesis del pequeño teorema de Fermat. \n",
     "\n",
-    "De haber haber sido su módulo 1, para la base $b$, se hubiera dicho que es un *posible primo de Fermat para la base $b$* y en tal caso, de haber sido compuesto estaríamos frente a un pseudo primo de Fermat para la base $b$.  "
+    "De haberse dado $b^{n-1} \\equiv 1 \\mod n$, se hubiera dicho que es un *posible primo de Fermat para la base $b$* y en tal caso, de haber sido compuesto estaríamos frente a un pseudo primo de Fermat para la base $b$.  "
    ]
   },
   {
@@ -636,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +651,7 @@
        "75577399"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,16 +664,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apartado primero \n",
+    "### Apartado primero \n",
     "Use el algoritmo manual para calcular el símbolo de Jacobi $(\\frac{p}{n}),$ para $p$ cada uno de los 5 primeros primos. \n",
     "\n",
-    "### Solución   \n",
+    "#### Solución   \n",
     "Entendemos por algoritmo manual a aquel que usando las propiedades del símbolo de Jacobi permiten calcularlo sin factorizar y sin exponenciación. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +691,7 @@
        "1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,37 +713,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Caso $p=2$\n",
+    "##### Caso $p=2$\n",
     "Se tienen que $n \\equiv -1 \\mod 8$, luego \n",
-    "$$\\left(\\frac{2}{n}\\right) = (-1)^{8k^2-6k} = 1$$"
+    "$$\\left(\\frac{2}{n}\\right) = (-1)^{(n^2-1)/8} = 1$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Caso $p=3$\n",
+    "##### Caso $p=3$\n",
     "\n",
     "En este caso tanto $n$ como $p$ son impares y además se cumple que\n",
     "$$n \\equiv 3 \\mod 4$$\n",
     "entonces \n",
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
+    "    \\left(\\frac{3}{n}\\right)\n",
+    "    = \n",
+    "    - \\left(\\frac{n}{3}\\right)\n",
+    "\\end{equation*}\n",
+    "y como $n \\equiv 1 \\mod 3$\n",
+    "\\begin{equation*}\n",
     "    \\left(\\frac{3}{n}\\right)\n",
     "    = \n",
     "    - \\left(\\frac{n}{3}\\right)\n",
     "    = \n",
     "    - \\left(\\frac{1}{3}\\right)\n",
-    "    = \n",
-    "    - \\left(\\frac{3}{1}\\right)\n",
     "   = -1 \n",
-    "\\end{equation}"
+    "\\end{equation*}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Caso $p=5$\n",
+    "##### Caso $p=5$\n",
     "Puesto que $5 \\equiv 1 \\mod 4$ entonces\n",
     "\\begin{equation*}\n",
     "    \\left(\\frac{5}{n}\\right)\n",
@@ -773,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +799,7 @@
        "4"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,12 +812,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Caso $p=7$\n",
+    "Por ser $7 \\equiv 3 \\mod 4$ se tiene que \n",
+    "\\begin{equation*}\n",
+    " \\left(\\frac{7}{n}\\right)\n",
+    "    = \n",
+    "  -\\left(\\frac{n}{7}\\right),\n",
+    "\\end{equation*}\n",
+    "como además $n \\equiv 2 \\mod 7$\n",
+    "\\begin{equation*}\n",
+    " \\left(\\frac{n}{7}\\right)\n",
+    "    = \n",
+    "  \\left(\\frac{2}{7}\\right), \n",
+    "\\end{equation*}\n",
+    "gracias a que $7 \\equiv -1 \\mod 8$ y las propiedades del símbolo de Jacobi\n",
+    "\\begin{equation*}\n",
+    " \\left(\\frac{2}{7}\\right)\n",
+    "    = \n",
+    "  (-1)^{\\frac{7^2-1}{2}} = 1\n",
+    "\\end{equation*}\n",
+    "por lo que acabamos de ver que \n",
+    "\\begin{equation*}\n",
+    " \\left(\\frac{7}{n}\\right)\n",
+    "    = \n",
+    "  -1\n",
+    "\\end{equation*}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mod (75577399,7) = 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_modulo_p(n,7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Caso $p=11$\n",
+    "Por ser $11 \\equiv 3 \\mod 4$ se tiene que \n",
+    "\\begin{equation*}\n",
+    " \\left(\\frac{11}{n}\\right)\n",
+    "    = \n",
+    "  -\\left(\\frac{n}{11}\\right),\n",
+    "\\end{equation*}\n",
+    "como además $n \\equiv 7 \\mod 11$\n",
+    "\\begin{equation*}\n",
+    " \\left(\\frac{n}{11}\\right)\n",
+    "    = \n",
+    "  \\left(\\frac{7}{11}\\right), \n",
+    "\\end{equation*}\n",
+    "ya que $7 \\equiv 3 \\mod 4$ se tiene que \n",
+    "\\begin{equation*}\n",
+    " \\left(\\frac{7}{11}\\right)\n",
+    "    = \n",
+    "  - \\left(\\frac{11}{7}\\right)\n",
+    "\\end{equation*}\n",
+    "puesto que $11 \\equiv 4 \\mod 7$  y aplicando las propiedades del símbolo de Jacobi se tiene que \n",
+    "\\begin{equation*}\n",
+    " \\left(\\frac{11}{7}\\right)\n",
+    "    =\n",
+    "    \\left(\\frac{4}{7}\\right)\n",
+    "    =\n",
+    "    \\left(\\frac{2}{7}\\right)\n",
+    "    \\left(\\frac{2}{7}\\right)\n",
+    "    = 1 \\times 1 = 1.\n",
+    "\\end{equation*}\n",
+    "Finalemente acabamos de probar que \n",
+    "\\begin{equation*}\n",
+    " \\left(\\frac{11}{n}\\right)\n",
+    " = 1\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mod (75577399,11) = 7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_modulo_p(n,11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Así pues es fácil construir una función que aplique el algoritmo de Jacobi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +951,7 @@
        "VerboseJacobi (generic function with 1 method)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -890,10 +1025,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apartado segundo \n",
+    "### Apartado segundo \n",
     "Si para alguna de esas bases $n$ es un posible primo de Fermat, comprueba si además es un posible primo de Euler. \n",
     "\n",
-    "### Solución\n",
+    "#### Solución\n",
     "\n",
     "Como hemos procedido en el ejercicio primero calcularemos comprobaremos si se satisface que \n",
     "$$a^{(p-1)} \\equiv 1 \\mod(p)$$\n",
@@ -902,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
